<resources>
    <string name="app_name">MTV Show</string>
    <string name="title_activity_ingresar">Ingresar</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sing_in_new">Crear nueva cuenta</string>
    <string name="action_sign_in_short">Ingresar</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="txtIniciarSesion">"Iniciar Sesión"</string>
    <string name="txtCreaTuCuenta">"Crea tu cuenta."</string>
    <string name="txtEmail">"Email"</string>
    <string name="txtContraseña">"Contraseña"</string>
    <string name="txtContinuar">"Continuar"</string>
    <string name="title_activity_menu_principal">Menu_principal</string>
    <string name="title_home">Inicio</string>
    <string name="title_dashboard">Buscar</string>
    <string name="title_notifications">Notificación</string>
    <string name="title_sesion">Perfil</string>
    <string name="title_registrarse">Registrarse</string>
    <string name="txtNombre">Nombre</string>
    <string name="txtApellido">Apellido</string>
    <string name="txtEdad">Edad</string>
    <string name="title_calendario">Calendario</string>

    <string-array name="entretenimiento">
        <item>Peliculas</item>
        <item>Series</item>
    </string-array>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_perfil_serie">Perfil_serie</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
</resources>
