<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentacion.nuevo_usuario2">

    <ImageView
        android:id="@+id/imgView"
        android:layout_width="193dp"
        android:layout_height="210dp"
        android:layout_gravity="center"
        tools:layout_editor_absoluteX="109dp"
        tools:layout_editor_absoluteY="84dp"
        tools:src="@drawable/avatar" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/btnFoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:onClick="subirFoto"
        android:src="@android:drawable/ic_menu_add"
        tools:layout_editor_absoluteX="260dp"
        tools:layout_editor_absoluteY="238dp" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="413dp"
        android:layout_height="376dp"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/imgView"
        tools:layout_editor_absoluteX="-1dp">

        <EditText
            android:id="@+id/txtNombre"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:ems="10"
            android:hint="@string/txtNombre"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/txtApellido"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:ems="10"
            android:hint="@string/txtApellido"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/txtEdad"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:ems="10"
            android:hint="@string/txtEdad"
            android:inputType="number" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="subirDatos"
            android:text="Terminar" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="197dp"
        android:layout_height="38dp"
        android:layout_marginStart="119dp"
        android:layout_marginLeft="119dp"
        android:layout_marginTop="36dp"
        android:text="Datos Personales"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>