<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentacion.modificar_usuario">

    <ImageView
        android:id="@+id/imgPerfil"
        android:layout_width="match_parent"
        android:layout_height="226dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/serie_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="409dp"
        android:layout_height="165dp"
        android:layout_marginTop="28dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/imgPerfil"
        tools:layout_editor_absoluteX="-3dp">

        <EditText
            android:id="@+id/txtNombre"
            android:layout_width="259dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/txtNombre"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/txtApellido"
            android:layout_width="259dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/txtApellido"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/intEdad"
            android:layout_width="149dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/txtEdad"
            android:inputType="number"
            android:verticalScrollbarPosition="defaultPosition" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginLeft="76dp"
        android:layout_marginTop="48dp"
        android:text="Modificar datos"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button7"
        android:layout_width="313dp"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="49dp"
        android:layout_marginLeft="49dp"
        android:layout_marginTop="24dp"
        android:onClick="actualizar"
        android:text="Listo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="184dp"
        android:layout_marginEnd="104dp"
        android:layout_marginRight="104dp"
        android:clickable="true"
        android:onClick="subirFoto"
        android:src="@android:drawable/ic_menu_camera"
        app:layout_constraintEnd_toEndOf="@+id/imgPerfil"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

</android.support.constraint.ConstraintLayout>